--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+user-mode-linux (2.6.16-1um-2) unstable; urgency=low
+
+  [Mattia Dongili]:
+  * add CONFIG_INITRD=y to allow bootstrapping install media.
+  * set CONFIG_ISO9660_FS=y to allow mounting iso images when bootstrapping
+    from install media
+
+ -- Mattia Dongili <malattia@debian.org>  Tue, 18 Apr 2006 20:40:11 +0200
+  
 user-mode-linux (2.6.16-1um-1) unstable; urgency=low
 
   * New upstream release (definitely Closes: #264772).
