--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+user-mode-linux (2.6.16-1um-3) unstable; urgency=low
+
+  [Mattia Dongili]:
+  * add 03_uml_switch patch (Closes: #367132)
+
+ -- Mattia Dongili <malattia@debian.org>  Sun, 21 May 2006 19:44:44 +0200
+
 user-mode-linux (2.6.16-1um-2) unstable; urgency=low
 
   [Mattia Dongili]:
