implement update-alternatives to cohexist with kernel-package self-built kernels

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ user-mode-linux (2.6.16-1um-3) unstable; urgency=low
 
   [Mattia Dongili]:
   * add 03_uml_switch patch (Closes: #367132)
+  * use the alternatives system to avoid conflicting with kernel-package
+    self-build UML kernels.
 
- -- Mattia Dongili <malattia@debian.org>  Sun, 21 May 2006 19:44:44 +0200
+ -- Mattia Dongili <malattia@debian.org>  Sat, 27 May 2006 19:32:08 +0200
 
 user-mode-linux (2.6.16-1um-2) unstable; urgency=low
 
