--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ user-mode-linux (2.6.16-2um-1) unstable; urgency=low
   * use the alternatives system to avoid conflicting with kernel-package
     self-build UML kernels.
   * don't include the debian directory in orig.tar.gz
+  * bump Standards-Version to the latest (3.7.2)
 
  -- Mattia Dongili <malattia@debian.org>  Sat, 27 May 2006 19:32:08 +0200
 
