mistake on changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,14 @@ user-mode-linux (2.6.18-1um-1) unstable; urgency=low
 
  -- Stefano Melchior <stefano.melchior@openlabs.it>  Tue, 26 Sep 2006 08:53:05 +0200
 
+user-mode-linux (2.6.17-1um-3) unstable; urgency=low
+
+  * 'mv debian/NEWS debian/NEWS.Debian' so that it will be catched by
+    apt-listchanges.
+  * add amd64 architecture, build and run tested. (Closes: #384881)
+
+ -- Mattia Dongili <malattia@debian.org>  Fri, 18 Aug 2006 19:10:49 +0200
+
 user-mode-linux (2.6.17-1um-2) unstable; urgency=low
 
   * Include IP_VS support. (Closes: #382295)
