--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 user-mode-linux (2.6.18-1um-2) unstable; urgency=low
 
   * removed patches/04_no-syscall, included in the 2.6.18 stable branch.
+  * added patches/04_include_PAGESHIFT_definition to fix build failure with
+    recent glibc.
 
- -- Mattia Dongili <malattia@debian.org>  Sat, 04 Nov 2006 17:07:36 +0100
+ -- Mattia Dongili <malattia@debian.org>  Thu, 09 Nov 2006 19:08:36 +0100
 
 user-mode-linux (2.6.18-1um-1) unstable; urgency=low
 
