--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+user-mode-linux (2.6.20-1um-1) unstable; urgency=low
+
+  * New upstream release.
+  * Included more crypto algorithms [Stefano Melchior]
+
+ -- Mattia Dongili <malattia@debian.org>  Mon, 07 May 2007 12:20:55 +0900
+
 user-mode-linux (2.6.18-1um-2) unstable; urgency=low
 
   * removed patches/04_no-syscall, included in the 2.6.18 stable branch.
