--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 user-mode-linux (2.6.21-1um-1) unstable; urgency=low
 
   * New upstream release.
+  * add amd64 (Closes: #384881)
 
- -- Mattia Dongili <malattia@debian.org>  Sat, 19 May 2007 14:18:47 +0900
+ -- Mattia Dongili <malattia@debian.org>  Sun, 27 May 2007 13:22:18 +0900
 
 user-mode-linux (2.6.20-1um-1) unstable; urgency=low
 
