Update UM kernel .config

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,9 @@
 user-mode-linux (2.6.22-1um-1) unstable; urgency=low
 
   * New upstream release (Closes: #436388).
-  * Remove inactive people from uploaders.
+  [Mattia Dongili]:
+    * Remove inactive people from uploaders.
+    * remove debugging options from .config
 
  -- Mattia Dongili <malattia@debian.org>  Sun, 19 Aug 2007 11:04:10 +0900
 
