remove umldefconfig (can be generated from the kernel sources)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ user-mode-linux (2.6.22-1um-1) unstable; urgency=low
 
   * New upstream release (Closes: #436388).
   [Mattia Dongili]:
-    * Remove inactive people from uploaders.
+    * remove inactive people from uploaders
     * remove debugging options from .config
+    * remove umldefconfig as it's easy to get from the kernel sources
 
  -- Mattia Dongili <malattia@debian.org>  Sun, 19 Aug 2007 11:04:10 +0900
 
