--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+user-mode-linux (2.6.24-1um-1) unstable; urgency=low
+
+  * New upstream release.
+  [Mattia Dongili]:
+    * add libvdeplug2 dependency
+
+ -- Mattia Dongili <malattia@debian.org>  Sun, 03 Feb 2008 16:08:54 +0900
+
 user-mode-linux (2.6.23-1um-1) unstable; urgency=low
 
   * New upstream release (Closes: #456836).
