--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-mode-linux (2.6.25-1um-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Mattia Dongili <malattia@debian.org>  Thu, 03 Jul 2008 21:32:45 +0900
+
 user-mode-linux (2.6.24-1um-1) unstable; urgency=low
 
   * New upstream release.
