--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+user-mode-linux (2.6.26-1um-1) unstable; urgency=medium
+
+  * New upstream release.
+  * added two fixes from uptream:
+      debian/patches/07_vde_user_build_fix.patch
+      debian/patches/08_fix_ptrace_crash.patch (in 2.6.26.1)
+
+ -- Mattia Dongili <malattia@debian.org>  Sat, 02 Aug 2008 12:17:12 +0900
+
 user-mode-linux (2.6.25-1um-2) unstable; urgency=medium
 
   * Fix build error in amd64 (Closes: #491921)
