--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-mode-linux (2.6.30-1um-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Mattia Dongili <malattia@debian.org>  Sun, 05 Jul 2009 11:07:28 +0900
+
 user-mode-linux (2.6.26-1um-2) unstable; urgency=low
 
   * remove debian/patches/08_fix_ptrace_crash.patch (in 2.6.26.1) and
