Add patch 04_remove_irqf_disabled
This patch brings back a working network inside the guest kernel.
See also
http://www.mail-archive.com/user-mode-linux-devel@lists.sourceforge.net/msg06464.html

Signed-off-by: Mattia Dongili <malattia@linux.it>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ user-mode-linux (2.6.30-1um-1) unstable; urgency=low
 
   * New upstream release.
   * Remove 07_vde_user_build_fix which has been merged upstream.
+  * Add 04_remove_irqf_disabled.patch to bring get a working network inside
+    the guest.
 
  -- Mattia Dongili <malattia@debian.org>  Sun, 05 Jul 2009 11:07:28 +0900
 
