--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ user-mode-linux (2.6.30-1um-1) unstable; urgency=low
     the guest.
   * Removed possibly MIA uploaders (Stefano Melchior) (Closes: #514667).
   * Include more config options (i.e.: IP_VS) (Closes: #509434).
+  * Stop suggesting linux-patch-skas, not in the repository anymore
+    (Closes: #495651).
 
  -- Mattia Dongili <malattia@debian.org>  Sun, 05 Jul 2009 11:07:28 +0900
 
