--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ user-mode-linux (2.6.30-1um-1) unstable; urgency=low
   * Stop suggesting linux-patch-skas, not in the repository anymore
     (Closes: #495651).
   * Suggest: vde2 for the vde UML network driver.
+  * Fix strrchr symbol clash on forced static builds (Closes: #494995).
 
  -- Mattia Dongili <malattia@debian.org>  Sun, 05 Jul 2009 11:07:28 +0900
 
