Make Lintian really slightly happier
Signed-off-by: Mattia Dongili <malattia@linux.it>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ user-mode-linux (2.6.32-1um-1) unstable; urgency=low
 
   * New upstream release (Closes: #560673).
   [ Mattia Dongili (4) ]
+        Make lintian really slightly happier
         Update dependencies and prepare 2.6.32
         add a patch to fix IF_NOTIFY_RESUME build error
         Update kernel configurations
