--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-mode-linux (2.6.32-1um-2) unstable; urgency=low
+
+  * Fix build failure due to SUBARCH being passed with a wrong value
+
+ -- Mattia Dongili <malattia@debian.org>  Fri, 08 Jan 2010 07:32:04 +0900
+
 user-mode-linux (2.6.32-1um-1) unstable; urgency=low
 
   * New upstream release (Closes: #560673).
