--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+user-mode-linux (3.2-1um-2) unstable; urgency=high
+
+  * Add Built-Using per Policy §7.8 (Closes: #679300).
+  * Refresh patches to apply with no fuzz to latest linux-source.
+  * Set new kernel options:
+      SECURITY_APPARMOR_COMPAT_24=y
+      NET_SCH_CODEL=m
+      FQ_CODEL=m
+
+ -- Mattia Dongili <malattia@debian.org>  Fri, 04 Jan 2013 07:11:32 +0900
+
 user-mode-linux (3.2-1um-1) unstable; urgency=low
 
   [ Mattia Dongili ]
