--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+user-mode-linux (3.12-1um-1) unstable; urgency=high
+
+  * New upstream release (Closes: #733351) - aka. I wish there was a better
+    way.
+
+ -- Mattia Dongili <malattia@debian.org>  Mon, 30 Dec 2013 07:53:50 +0900
+
 user-mode-linux (3.11-1um-2) unstable; urgency=high
 
   * enable devtmpfs for udev
