--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+user-mode-linux (4.7-1um-2) unstable; urgency=medium
+
+  * [9a4719f] Fix uml kernel build, disabling PIE and bindnow.
+    Thanks to Balint Reczey (Closes: 837579)
+
+ -- Ritesh Raj Sarraf <rrs@debian.org>  Sat, 22 Oct 2016 13:00:35 +0530
+
 user-mode-linux (4.7-1um-1) unstable; urgency=medium
 
   * [c36fba9] Add homepage field
