--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-mode-linux (4.15-1um-1) unstable; urgency=medium
+
+  * [688b914] New Linux Release
+
+ -- Ritesh Raj Sarraf <rrs@debian.org>  Tue, 27 Feb 2018 11:16:10 +0530
+
 user-mode-linux (4.14-1um-3) unstable; urgency=medium
 
   * Rebuild with newer linux-source-4.14 (Closes: #888971) 
