--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+user-mode-linux (4.17-1um-1) unstable; urgency=medium
+
+  * [c640a0e] Add patch to fix port-helper architecture dependent path
+    (Closes: #868285)
+  * [3af34b3] Update to Linux 4.17
+
+ -- Ritesh Raj Sarraf <rrs@debian.org>  Fri, 20 Jul 2018 12:15:08 +0545
+
 user-mode-linux (4.16-1um-2) unstable; urgency=medium
 
   * [3a7ffd8] Fix build failure on i386 architecture.
