--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+user-mode-linux (4.17-1um-1) unstable; urgency=medium
+
+  * [c640a0e] Add patch to fix port-helper architecture dependent path
+    (Closes: #868285)
+  * [3af34b3] Update to Linux 4.17
+  * [312ff63] Add lintian override for source package
+
+ -- Ritesh Raj Sarraf <rrs@debian.org>  Sat, 25 Aug 2018 10:25:30 +0545
+
 user-mode-linux (4.16-1um-2) unstable; urgency=medium
 
   * [3a7ffd8] Fix build failure on i386 architecture.
