--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-mode-linux (5.2-1um-2) unstable; urgency=medium
+
+  * [49a481e] Add gcc-multilib to build depends. Should fix FTBFS on i386
+
+ -- Ritesh Raj Sarraf <rrs@debian.org>  Fri, 18 Oct 2019 21:11:35 +0530
+
 user-mode-linux (5.2-1um-1) unstable; urgency=medium
 
   * [c5a5e78] Drop Mattia Dongili from Uploaders list (Closes: #933156)
