--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-mode-linux (5.3.0-bionic1) bionic; urgency=medium
+
+  * Port to bionic
+
+ -- Cedric Hombourger <chombourger@gmail.com>  Mon, 18 Nov 2019 09:06:27 +0100
+
 user-mode-linux (5.3-1um-1) unstable; urgency=medium
 
   * [10ebf91] Update to track Linux 5.3
