--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-mode-linux (4.18.0-bionic1) bionic; urgency=medium
+
+  * Port to bionic
+
+ -- Cedric Hombourger <chombourger@gmail.com>  Thu, 21 Nov 2019 07:58:55 +0100
+
 user-mode-linux (4.17-1um-1) unstable; urgency=medium
 
   * [c640a0e] Add patch to fix port-helper architecture dependent path
