--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-mode-linux (1:4.18.0-bionic2) bionic; urgency=medium
+
+  * Enable device-mapper support as a kernel built-in
+
+ -- Cedric Hombourger <chombourger@gmail.com>  Thu, 21 Nov 2019 16:41:16 +0100
+
 user-mode-linux (4.18.0-bionic1) bionic; urgency=medium
 
   * Port to bionic
