--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-mode-linux (1:4.18.0-bionic3) bionic; urgency=medium
+
+  * Make VFAT built-in as well as typical code-pages
+
+ -- Cedric Hombourger <chombourger@gmail.com>  Fri, 22 Nov 2019 16:16:47 +0100
+
 user-mode-linux (1:4.18.0-bionic2) bionic; urgency=medium
 
   * Enable device-mapper support as a kernel built-in
