--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+user-mode-linux (1:4.18.0-bionic5) bionic; urgency=medium
+
+  * Enable the NILFS2 file-system as a built-in kernel module.
+
+ -- Cedric Hombourger <chombourger@gmail.com>  Wed, 04 Dec 2019 06:28:40 +0100
+
 user-mode-linux (1:4.18.0-bionic4) bionic; urgency=medium
 
   * Enable the 'selinux' boot parameter
