--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+seine-uml (4.18.0-bionic7) bionic; urgency=medium
+
+  * Remove config.i386 (not maintained)
+
+ -- Cedric Hombourger <chombourger@gmail.com>  Mon, 16 Dec 2019 07:41:53 +0100
+
 seine-uml (4.18.0-bionic6) bionic; urgency=medium
 
   * Rename source and binary package to seine-uml 
